--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view_result_layout_selector.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view_result_layout_selector.xhtml
@@ -36,10 +36,12 @@ Needed parameters:
     <ul class="layoutViewMode" style="display:inline;">
      <c:if test="#{contentView.showRefreshPage}">
        <li>
-         <h:commandLink action="#{contentView.refreshAndRewindPageProvider()}">
+         <h:commandLink action="#{contentView.refreshAndRewindPageProvider()}"
+           id="refreshContentViewLink">
            <h:graphicImage value="/img/refresh.png"
              alt="#{messages['label.refresh']}"
-             title="#{messages['label.refresh']}" />
+             title="#{messages['label.refresh']}"
+             id="refreshContentViewImage" />
          </h:commandLink>
        </li>
      </c:if> 
