add delay for failing tests

--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/importPDF.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/importPDF.html
@@ -82,6 +82,11 @@
 	<td>importFileRichUploadForm:upload:file</td>
 	<td>${filepath}</td>
 </tr>
+<tr>                                                                                              
+        <td>pause</td>
+        <td>3000</td>
+        <td></td>
+</tr>
 <tr>
 	<td>clickAndWait</td>
 	<td>//input[@value='Upload']</td>
