NXP-6618: improve tooltips

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/widgets/contributors_widget.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/widgets/contributors_widget.xhtml
@@ -24,9 +24,13 @@
   <div>
     <c:forEach var="username" items="#{field}" varStatus="status">
       <c:if test="#{!status.first}">#{status.last ? andLabel : ', '}</c:if>
-      <h:outputText value="#{nxu:userFullName(username)}" 
-        title="#{username}" onmouseover="tooltip.show(username, 500);"
-        onmouseout="tooltip.hide();"/>
+      <div class="#{widget.id}_#{status.index}">
+        <h:outputText value="#{nxu:userFullName(username)}" 
+          title="#{username}" />
+        <script>
+          jQuery(".#{widget.id}_#{status.index} span").tooltip();
+        </script>
+      </div>
     </c:forEach>
   </div>
 </c:if>
