NXP-4936: internationalize what's easy to internationalize

--- a/src/main/resources/web/nuxeo.war/layoutDemo/global_page_template.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/global_page_template.xhtml
@@ -6,7 +6,7 @@
   xmlns:nxthemes="http://nuxeo.org/nxthemes">
 
   <ui:define name="page title">
-    <h:outputText value="Layout demo" />
+    <h:outputText value="#{messages['label.layoutDemo.title']}" />
   </ui:define>
 
   <ui:define name="stylesheets">
