--- a/src/main/resources/web/nuxeo.war/layoutDemo/header.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/header.xhtml
@@ -3,9 +3,9 @@
     <a href="#{baseURL}layoutDemo/">
       <img width="89" height="25"
         src="#{baseURL}layoutDemo/img/nuxeo_logo.png"
-        alt="Nuxeo Showcase - Layout Service (forms and views)" />
+        alt="#{messages['label.layoutDemo.title']}" />
     </a>
-    <span>Showcase - Layout Service (forms and views)</span>
+    <span>#{messages['label.layoutDemo.title']}</span>
   </div>
   <div class="customButtons">
     <p>
