--- a/src/main/resources/web/nuxeo.war/layoutDemo/listing_widget_demo_template.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/listing_widget_demo_template.xhtml
@@ -18,10 +18,10 @@ Needed parameters:
     <thead>
       <tr>
         <th>
-          Edit mode
+          #{messages['label.layoutDemo.widgetDemo.editMode']}
         </th>
         <th>
-          View mode
+          #{messages['label.layoutDemo.widgetDemo.viewMode']}
         </th>
       </tr>
     </thead>
@@ -35,7 +35,8 @@ Needed parameters:
                 mode="edit"
                 name="#{demoLayout.name}" />
               <p class="buttonsGadget">
-                <h:commandButton value="submit"
+                <h:commandButton
+                  value="#{messages['label.layoutDemo.widgetDemo.submit']}"
                   styleClass="button"
                   id="#{demoLayout.name}_edit_form_submitButton" />
               </p>
@@ -48,7 +49,8 @@ Needed parameters:
                 mode="edit"
                 name="#{demoLayout.name}" />
               <p class="buttonsGadget">
-                <a4j:commandButton value="submit"
+                <a4j:commandButton
+                  value="#{messages['label.layoutDemo.widgetDemo.submit']}"
                   styleClass="button"
                   id="#{demoLayout.name}_edit_form_submitButton"
                   reRender="#{demoLayout.name}_view_form, #{demoLayout.name}_edit_form" />
