--- a/src/main/resources/web/nuxeo.war/layoutDemo/menu.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/menu.xhtml
@@ -5,21 +5,21 @@
 
   <ui:include src="menu_template.xhtml">
     <ui:param name="category" value="standard" />
-    <ui:param name="categoryTitle" value="Standard widgets" />
+    <ui:param name="categoryTitle" value="#{messages['label.layoutDemo.standardWidgets']}" />
     <ui:param name="currentWidgetType" value="#{currentWidgetType}" />
     <ui:param name="widgetTypes" value="#{standardWidgetTypes}" />
   </ui:include>
 
   <ui:include src="menu_template.xhtml">
     <ui:param name="category" value="listing" />
-    <ui:param name="categoryTitle" value="Listing widgets" />
+    <ui:param name="categoryTitle" value="#{messages['label.layoutDemo.listingWidgets']}" />
     <ui:param name="currentWidgetType" value="#{currentWidgetType}" />
     <ui:param name="widgetTypes" value="#{listingWidgetTypes}" />
   </ui:include>
 
   <ui:include src="menu_template.xhtml">
     <ui:param name="category" value="custom" />
-    <ui:param name="categoryTitle" value="Custom widgets" />
+    <ui:param name="categoryTitle" value="#{messages['label.layoutDemo.customWidgets']}" />
     <ui:param name="currentWidgetType" value="#{currentWidgetType}" />
     <ui:param name="widgetTypes" value="#{customWidgetTypes}" />
   </ui:include>
