--- a/src/main/resources/web/nuxeo.war/layoutDemo/show_xml_source_template.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/show_xml_source_template.xhtml
@@ -14,7 +14,7 @@
   <div class="foldableBox">
     <h3 class="folded">
       <a href="#nogo" onclick="showXMLSources(this, '#{sourcePath}', jQuery(this).parent().next().children('pre')[0]);return toggleBox(this);">
-        <h:outputText value="Show sources" />
+        <h:outputText value="#{messages['label.layoutDemo.widgetDemo.showSources']}" />
       </a>
     </h3>
   
@@ -29,7 +29,7 @@
   <div class="foldableBox">
     <h3 class="folded">
       <a href="#nogo" onclick="showXMLSources(this, 'layoutDemo/sources/schemas/layout_demo_schema.xsd', jQuery(this).parent().next().children('pre')[0]);return toggleBox(this);">
-        <h:outputText value="Show schema definition" />
+        <h:outputText value="#{messages['label.layoutDemo.widgetDemo.showSchemaDefinition']}" />
       </a>
     </h3>
   
