--- a/src/main/resources/web/nuxeo.war/layoutDemo/widget_page_template.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/widget_page_template.xhtml
@@ -6,7 +6,8 @@
   xmlns:nxu="http://nuxeo.org/nxweb/util">
 
   <ui:define name="page title">
-    <h:outputText value="Layout demo - #{currentWidgetType.label}"/>
+    <h:outputText
+      value="#{messages['label.layoutDemo.shortTitle']} - #{currentWidgetType.label}"/>
   </ui:define>
 
   <ui:define name="content">
@@ -17,14 +18,20 @@
 
       <ul>
         <li class="#{nxu:test(empty layoutDemoCurrentTabId, 'selected', '')}">
-          <a href="#{baseURL}#{currentWidgetType.url}">Overview</a>
+          <a href="#{baseURL}#{currentWidgetType.url}">
+            #{messages['label.layoutDemo.widgetDemo.overview']}
+          </a>
         </li>
         <li class="#{nxu:test(layoutDemoCurrentTabId == 'reference', 'selected', '')}">
-          <a href="#{baseURL}#{currentWidgetType.url}?tabId=reference">Reference</a>
+          <a href="#{baseURL}#{currentWidgetType.url}?tabId=reference">
+            #{messages['label.layoutDemo.widgetDemo.reference']}
+          </a>
         </li>
         <c:if test="#{currentWidgetType.previewEnabled}">
           <li class="#{nxu:test(layoutDemoCurrentTabId == 'preview', 'selected', '')}">
-            <a href="#{baseURL}#{currentWidgetType.url}?tabId=preview">Preview</a>
+            <a href="#{baseURL}#{currentWidgetType.url}?tabId=preview">
+              #{messages['label.layoutDemo.widgetDemo.preview']}
+            </a>
           </li>
         </c:if>
       </ul>
@@ -38,7 +45,8 @@
           <div class="foldableBox">        
             <h3 class="unfolded">
               <a href="#nogo" onclick="return toggleBox(this)">
-                <h:outputText value="Description" />
+                <h:outputText
+                  value="#{messages['label.layoutDemo.widgetDemo.description']}" />
               </a>
             </h3>
   
