--- a/src/main/resources/web/nuxeo.war/layoutDemo/widget_preview_frame.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/widget_preview_frame.xhtml
@@ -8,7 +8,8 @@
   xmlns:nxu="http://nuxeo.org/nxweb/util">
 
   <ui:define name="page title">
-    <h:outputText value="Widget Preview" />
+    <h:outputText
+      value="#{messages['label.layoutDemo.shortTitle']} - #{messages['label.layoutDemo.widgetPreview.title']}"/>
   </ui:define>
 
   <ui:define name="body">
