--- a/src/main/resources/web/nuxeo.war/layoutDemo/widget_reference_template.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/widget_reference_template.xhtml
@@ -10,7 +10,8 @@
   
     <h3 class="unfolded">
       <a href="#nogo" onclick="return toggleBox(this)">
-        <h:outputText value="General information" />
+        <h:outputText
+          value="#{messages['label.layoutDemo.reference.information']}" />
       </a>
     </h3>
   
@@ -19,7 +20,7 @@
         <tbody>
           <tr class="dataRowEven">
             <td class="labelColumn">
-              Type
+              #{messages['label.layoutDemo.reference.type']}
             </td>
             <td class="fieldColumn">
               #{currentWidgetTypeDef.name}
@@ -27,7 +28,7 @@
           </tr>
           <tr class="dataRowOdd">
             <td class="labelColumn">
-              Handler class
+              #{messages['label.layoutDemo.reference.handlerClass']}
             </td>
             <td class="fieldColumn">
               #{currentWidgetTypeDef.handlerClassName}
@@ -35,7 +36,7 @@
           </tr>
           <tr class="dataRowEven">
             <td class="labelColumn">
-              Properties
+              #{messages['label.layoutDemo.reference.properties']}
             </td>
             <td class="fieldColumn">
               #{currentWidgetTypeDef.properties}
@@ -43,7 +44,7 @@
           </tr>
           <tr class="dataRowOdd">
             <td class="labelColumn">
-              Title
+              #{messages['label.layoutDemo.reference.title']}
             </td>
             <td class="fieldColumn">
               #{currentWidgetTypeConf.title}
@@ -51,7 +52,7 @@
           </tr>
           <tr class="dataRowEven">
             <td class="labelColumn">
-              Description
+              #{messages['label.layoutDemo.reference.description']}
             </td>
             <td class="fieldColumn">
               <h:outputText value="#{currentWidgetTypeConf.description}" escape="false" />
@@ -59,7 +60,7 @@
           </tr>
           <tr class="dataRowOdd">
             <td class="labelColumn">
-              Categories
+              #{messages['label.layoutDemo.reference.categories']}
             </td>
             <td class="fieldColumn">
               #{nxu:joinCollection(currentWidgetTypeConf.categories, ',')}
@@ -75,7 +76,7 @@
       <nxl:layout definition="#{layoutDef}" mode="view_reference"
         value="#{viewPreviewLayoutDef.properties}"
         template="/layoutDemo/layouts/layout_demo_reference_template.xhtml"
-        title="Global Properties" />
+        title="#{messages['label.layoutDemo.reference.anyProperties']}" />
     </c:forEach>
   </div>
 
@@ -84,7 +85,7 @@
       <nxl:layout definition="#{layoutDef}" mode="view_reference"
         value="#{viewPreviewLayoutDef.properties}"
         template="/layoutDemo/layouts/layout_demo_reference_template.xhtml"
-        title="View Properties" />
+        title="#{messages['label.layoutDemo.reference.viewProperties']}" />
     </c:forEach>
   </div>
 
@@ -93,7 +94,7 @@
       <nxl:layout definition="#{layoutDef}" mode="view_reference"
         value="#{viewPreviewLayoutDef.properties}"
         template="/layoutDemo/layouts/layout_demo_reference_template.xhtml"
-        title="Edit Properties" />
+        title="#{messages['label.layoutDemo.reference.editProperties']}" />
     </c:forEach>
   </div>
 
