NXP-4936: open all menu items when no widget type is selected

--- a/ftest/selenium/tests/testMenu.html
+++ b/ftest/selenium/tests/testMenu.html
@@ -28,120 +28,61 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyNotVisible</td>
-	<td>link=Textarea</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyNotVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=Text</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyNotVisible</td>
-	<td>link=Int</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyNotVisible</td>
-	<td>link=Secret</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyNotVisible</td>
-	<td>link=Datetime</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyNotVisible</td>
-	<td>link=File</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyNotVisible</td>
-	<td>link=Htmltext</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyNotVisible</td>
-	<td>link=Vocabulary</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyNotVisible</td>
-	<td>link=Multiple vocabulary</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyNotVisible</td>
-	<td>link=Checkbox</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyNotVisible</td>
-	<td>link=List</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>link=Standard widgets</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>link=Text</td>
-	<td>1000</td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=Textarea</td>
-	<td>1000</td>
+	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=Int</td>
-	<td>1000</td>
+	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=Secret</td>
-	<td>1000</td>
+	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=Datetime</td>
-	<td>1000</td>
+	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=File</td>
-	<td>1000</td>
+	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=Htmltext</td>
-	<td>1000</td>
+	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=Vocabulary</td>
-	<td>1000</td>
+	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=Multiple vocabulary</td>
-	<td>1000</td>
+	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=Checkbox</td>
-	<td>1000</td>
+	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=List</td>
-	<td>1000</td>
+	<td></td>
 </tr>
+<!-- listing widgets -->
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=Listing widgets</td>
@@ -150,11 +91,6 @@
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=Author</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>link=Listing widgets</td>
 	<td></td>
 </tr>
 <tr>
@@ -204,29 +140,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyNotVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=Complex</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyNotVisible</td>
+	<td>verifyElementPresent</td>
 	<td>link=Template</td>
 	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>link=Custom widgets</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>link=Complex</td>
-	<td>1000</td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>link=Template</td>
-	<td>1000</td>
 </tr>
 
 </tbody></table>
