--- a/nuxeo-distribution-dm/ftest/selenium/tests/publication/multipleVersionPublication.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/publication/multipleVersionPublication.html
@@ -373,7 +373,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -416,7 +416,7 @@
  -->
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -934,7 +934,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -1040,7 +1040,7 @@
  -->
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
