--- a/nuxeo-distribution-dm/ftest/selenium/tests/serialReviewAbandon.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/serialReviewAbandon.html
@@ -119,7 +119,7 @@
 <!--vérification de la mise àjour du tableau de bord-->
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -319,7 +319,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -379,7 +379,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -502,7 +502,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -583,7 +583,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -639,7 +639,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -690,7 +690,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
