--- a/nuxeo-distribution-dm/ftest/selenium/tests/serialReviewNoAddReviewers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/serialReviewNoAddReviewers.html
@@ -360,7 +360,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -431,7 +431,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -502,7 +502,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -538,7 +538,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -579,7 +579,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
