--- a/nuxeo-distribution-dm/ftest/selenium/tests/testMultipleDomainsDashboard.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/testMultipleDomainsDashboard.html
@@ -58,12 +58,12 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -223,12 +223,12 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
