--- a/nuxeo-distribution-dm/ftest/selenium/tests/answerToCommentOnTopicWithoutModeration.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/answerToCommentOnTopicWithoutModeration.html
@@ -11,7 +11,7 @@
 <!--Insertion de la réponse-->
 <tr>
         <td>open</td>
-        <td>restAPI/systemLog?token=dolog&amp;level=WARN&amp;message=----- Selenium answerToCommentOnTopicWithoutModeration</td>
+        <td>restAPI/systemLog?token=dolog&amp;level=INFO&amp;message=----- Selenium answerToCommentOnTopicWithoutModeration</td>
         <td></td>
 </tr>
 <tr>
@@ -66,8 +66,18 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
@@ -102,8 +112,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
