--- a/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewAddReviewers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewAddReviewers.html
@@ -134,7 +134,17 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
 	<td></td>
 </tr>
 <tr>
@@ -195,7 +205,17 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
 	<td></td>
 </tr>
 <tr>
@@ -328,7 +348,17 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
 	<td></td>
 </tr>
 <tr>
@@ -466,7 +496,17 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
 	<td></td>
 </tr>
 <tr>
@@ -599,7 +639,17 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
 	<td></td>
 </tr>
 <tr>
@@ -769,7 +819,17 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
 	<td></td>
 </tr>
 <tr>
