--- a/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewNoAddReviewers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewNoAddReviewers.html
@@ -374,8 +374,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
@@ -435,8 +440,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
@@ -496,8 +506,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
@@ -557,8 +572,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -620,8 +640,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
