--- a/nuxeo-distribution-dm/ftest/selenium/tests/approveCommentOnTopicWithModeration.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/approveCommentOnTopicWithModeration.html
@@ -49,8 +49,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
