--- a/nuxeo-distribution-dm/ftest/selenium/tests/blockRights.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/blockRights.html
@@ -118,8 +118,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyElementNotPresent</td>
@@ -169,8 +174,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyElementNotPresent</td>
@@ -225,8 +235,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyElementNotPresent</td>
@@ -276,8 +291,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyElementNotPresent</td>
