--- a/nuxeo-distribution-dm/ftest/selenium/tests/opensocial/testOpensocialDashboard.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/opensocial/testOpensocialDashboard.html
@@ -28,18 +28,18 @@
 </tr>
 <tr>
 	<td>open</td>
-	<td>nxpath/default/default-domain@opensocial_dashboard</td>
+	<td>nxpath/default/default-domain@user_center</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>username</td>
-	<td>jdoe</td>
+	<td>Administrator</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>password</td>
-	<td>jdoe1</td>
+	<td>Administrator</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -48,7 +48,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>nxDocumentList</td>
+	<td>content</td>
 	<td>60000</td>
 </tr>
 <tr>
