--- a/nuxeo-distribution-dm/ftest/selenium/tests/parallelReviewAddReviewers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/parallelReviewAddReviewers.html
@@ -343,8 +343,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
@@ -464,8 +469,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
@@ -585,8 +595,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
@@ -723,8 +738,13 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -770,7 +790,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
