--- a/nuxeo-distribution-dm/ftest/selenium/tests/publication/publishingRejectBySectionWriter.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/publication/publishingRejectBySectionWriter.html
@@ -50,7 +50,7 @@
 <!--Vérification de l'affichage de la demande de publication dans le tableau de bord-->
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
@@ -108,7 +108,7 @@
 <!--verification de la mise à jour du tableau de bord-->
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Dashboard</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
